language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_return_reference_invalid_1.exp
error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_return_reference_invalid_1.move:10:9
   │
10 │         borrow_global_mut<T1>(Signer::address_of(account))
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid return. Resource variable 'T1' is still being borrowed.
   │         It is still being mutably borrowed by this reference

